--- a/ecommerce/products/templates/products/list.html
+++ b/ecommerce/products/templates/products/list.html
@@ -1,12 +1,16 @@
+{% extends "base.html"%}
+
+{% block content %}
 <p>Products List View</p>
 
+<div class="container">
+    <div class="row">
 
-
-
-    {% for obj in object_list %}
-        <a href='{{obj.get_absolute_url}}'> {{ obj.title }} </a>
-        <p>Description: {{ obj.description }} </p>
-        <p>Price: {{ obj.price }} </p>
-        <p>----------------------------------</p>
-
-    {% endfor %}
+        {% for obj in object_list %}
+            <div class="col">
+                {% include 'products/snippets/card.html' with instance=obj %}       
+            </div>
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
