--- a/ecommerce/templates/auth/login.html
+++ b/ecommerce/templates/auth/login.html
@@ -1,4 +1,27 @@
-<form method="POST"> {% csrf_token %}
+{% extends "base.html"  %}
+
+{% block content %}
+<!-- <form method="POST"> {% csrf_token %}
     {{ form }}
     <button type="submit" class="btn btn-default btn-secondary">Submit</button>
-  </form>
+  </form> -->
+
+
+  <div class="text-center">
+    <h1>{{ title }}</h1>        
+  </div>
+  <div class="container">
+  <div class="row">
+    <div class="col">
+      <p>{{ content }}</p>
+      <div class="col-sm-12 col-md-12 col-lg-8 col-12">
+        <form method="POST"> {% csrf_token %}
+          {{ form }}
+          <button type="submit" class="btn btn-default btn-secondary">Submit</button>
+        </form>
+        
+    </div>
+    </div>
+  </div>
+  </div>
+{% endblock %}
