--- a/ecommerce/templates/home_page.html
+++ b/ecommerce/templates/home_page.html
@@ -3,13 +3,14 @@
 <title>Home Page Template</title>
 {% block content %}
 
-    <div class="text-center">
+    <div class="text-center gogh">
       <h1>{{ title }}</h1>        
     </div>
     <div class="container">
     <div class="row">
       <div class="col">
-        <img src="{% static 'img/beach.jpg' %}" class="img-fluid">
+        <!-- <img src="{% static 'img/beach.jpg' %}" class="img-fluid"> -->
+        <img src="{% static 'img/bg-amendoeira.jpg' %}" class="img-fluid">
         <p>{{ content }}</p>
       </div>
     </div>
