--- a/ecommerce/templates/auth/login.html
+++ b/ecommerce/templates/auth/login.html
@@ -17,7 +17,7 @@
       <div class="col-sm-12 col-md-12 col-lg-8 col-12">
         <form method="POST"> {% csrf_token %}
           {{ form }}
-          <button type="submit" class="btn btn-default btn-secondary">Submit</button>
+          <button type="submit" class="btn btn-default btn-secondary ml-3">Submit</button>
         </form>
         
     </div>
