--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -7,15 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     
-
-    <title>Base Template</title>
+    
+    <title>eGogh{% if title %} - {{title }}{% else %} eCommerce{% endif %}</title>
     {% include 'base/css.html' %}
   </head>
   <body>
+      
     {% include 'base/navbar.html' with brand_name='eGogh' %}
-    {% block content %}
-    {% endblock %}
-    
-    {% include 'base/js.html' %}
+    <div class="container"></div>
+      {% block content %}
+      {% endblock %}
+      
+      {% include 'base/js.html' %}
+  </div>
   </body>
 </html>
