--- a/ecommerce/templates/contact/view.html
+++ b/ecommerce/templates/contact/view.html
@@ -2,17 +2,17 @@
 
 {% block content%}
 
-  <div class="text-center">
+  <div class="text-center gogh">
     <h1>{{ title }}</h1>        
   </div>
   <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col ">
       <p>{{ content }}</p>
-      <div class="col-sm-12 col-md-12 col-lg-8 col-12">
+      <div class="col-sm-12 col-md-12 col-lg-8 col-12  container ">
         <form method="POST"> {% csrf_token %}
           {{ form }}
-          <button type="submit" class="btn btn-default btn-secondary">Submit</button>
+          <button type="submit" class="btn btn-default btn-secondary mt-3 mb-3">Submit</button>
         </form>
     </div>
     </div>
