--- a/static_cdn/static_root/css/main.css
+++ b/static_cdn/static_root/css/main.css
@@ -1,3 +1,9 @@
+
 body {
     color: #ccc;
+    /* background-image: url("bg-amendoeira.jpg");
+    background-color: rgba(201, 76, 76, 0.3);    */
+    /* background-color: rgba(238, 238, 238, 0.81) !important; */
+    background-image: url('bg-amendoeira2.png');
+    /* background-blend-mode: normal; */
 }
