--- a/ecommerce/products/templates/products/snippets/update-cart.html
+++ b/ecommerce/products/templates/products/snippets/update-cart.html
@@ -1,8 +1,12 @@
 <form class="form my-2 my-lg-0" method='POST' action='{% url "cart:update"%}'>{% csrf_token %}
     <input type="hidden" name="product_id" value="{{ product.id }}">
-    {% if product in cart.products.all %}
-        In cart <button type="submit" class="btn btn-link">Remove?</button>
+    {% if in_cart %}
+        <button type="submit" class="btn btn-link btn-sm " style="padding: 0px;cursor: pointer;">Remove?</button>
     {% else %}
-        <button type="submit" class="btn btn-success">Add to cart</button>
+        {% if product in cart.products.all %}
+            In cart <button type="submit" class="btn btn-link">Remove?</button>
+        {% else %}
+            <button type="submit" class="btn btn-success">Add to cart</button>
+        {% endif %}
     {% endif %}
 </form>
