--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Font Awesome Script-->
+    <script src="https://kit.fontawesome.com/3edd2f4c5c.js"></script>
     
     
     <title>eGogh{% if title %} - {{title }}{% else %} eCommerce{% endif %}</title>
