--- a/ecommerce/templates/base/navbar.html
+++ b/ecommerce/templates/base/navbar.html
@@ -2,7 +2,10 @@
 {% url 'contact' as contact_url%}
 {% url 'login' as login_url%}
 {% url 'register' as register_url%}
-{% url 'products:list' as products_url%}
+{% url 'product:list' as products_url%}
+{% url 'cart:home' as cart_url%}
+<!-- {% url 'products:list' as products_url%} -->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3 navshadow">
     <a class="navbar-brand gogh" href="{{ home_url }}">{% if brand_name %}{{ brand_name }}{% else %} eCommerce{% endif %}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,9 +20,7 @@
         <li class="nav-item">
           <a class="nav-link {% if request.path == contact_url %} active{% endif %}" href="{% url 'contact' %}">Contact</a>
         </li>
-        <!-- <li class="nav-item">
-            <a class="nav-link {% if request.path == login_url %} active{% endif %}" href="{% url 'login' %}">Login</a>
-        </li> -->
+        
         {% if request.user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link {% if request.path == login_url %} active{% endif %}" href="{% url 'login' %}">Logout</a>
@@ -29,20 +30,23 @@
                 <a class="nav-link {% if request.path == login_url %} active{% endif %}" href="{% url 'login' %}">Login</a>
             </li>
         {% endif %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle dropdown-toggle-split {% if request.path == products_url %} active{% endif %}" href="{{ url_products }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Products
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link  {% if request.path == products_url %} active{% endif %}" href="{{ products_url }}" >
+            Products
+          </a>          
         </li>
+        <li class="nav-item {% if request.path == cart_url %} active{% endif %}">
+            <a class="nav-link " href="{{ cart_url }}">
+              {% if request.session.cart_obj.products.count < 1 %}
+                <i class="fas fa-shopping-cart"></i>
+              {% else %}
+                <i class="fas fa-cart-arrow-down"></i>
+              {% endif %}
+              {{ request.session.cart_items }}
+            </a>
+        </li>
+        <!-- request.session.cart_obj.products.count ==  -->
+        
       </ul>
       {% if request.user.is_authenticated %}
         <p style=" margin-right: 5px;">Olá, {{ request.user.username}}!</p>
