--- a/ecommerce/templates/base/navbar.html
+++ b/ecommerce/templates/base/navbar.html
@@ -1,6 +1,7 @@
 {% url 'home' as home_url%}
 {% url 'contact' as contact_url%}
 {% url 'login' as login_url%}
+{% url 'logout' as logout_url%}
 {% url 'register' as register_url%}
 {% url 'product:list' as products_url%}
 {% url 'cart:home' as cart_url%}
@@ -23,7 +24,7 @@
         
         {% if request.user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link {% if request.path == login_url %} active{% endif %}" href="{% url 'login' %}">Logout</a>
+                <a class="nav-link {% if request.path == logout_url %} active{% endif %}" href="{{ logout_url }}">Logout</a>
             </li>
             {% else %}
             <li class="nav-item">
