--- a/ecommerce/carts/templates/cart/checkout.html
+++ b/ecommerce/carts/templates/cart/checkout.html
@@ -1,9 +1,21 @@
 {% extends "base.html"%}
 
 {% block content %}
+{% if not billing_profile %}
+    <div class="container text-center row">
+        <div class="col-12 col-md-6">
+            <p class="lead"> Login</p>
+            {% include 'accounts/snippets/form.html' with form=login_form next_url=request.build_absolute_uri %}
+        </div>
+        <div class="col-12 col-md-6">
+            <p>Continue as Guest</p>
+        </div>
+    </div>
+{% else %}
     <h1>Checkout</h1>
     <p>Cart Total: {{object.cart.total}}</p>
     <p>Shipping Total: {{object.shipping_total}}</p>
     <p>Order Total: {{object.order_total}}</p>
+{% endif %}
       
 {% endblock %}
