--- a/ecommerce/carts/templates/cart/checkout.html
+++ b/ecommerce/carts/templates/cart/checkout.html
@@ -1,6 +1,7 @@
 {% extends "base.html"%}
 
 {% block content %}
+{{object.order_id}} -- {{object.cart}}
 {% if not billing_profile %}
     <div class="container text-center row">
         <div class="col-12 col-md-6">
